--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li>Prefer scrimba over other platforms</li>
         </ul>
         <p>Please connect with me on <a href="https://www.linkedin.com/in/naveen6802" target="_blank">LinkedIn here.</a></p>
+        <p>Check out my another portfolio website <a href="https://naveen-6802.github.io" target="_blank">here</a>.</p>
         <input type="text" placeholder="Enter email...">
         <button>Join newsletter</button>
     </body>
