--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Challenge 1:
         Write the HTML for your personal website.
         -->
-        <img src="https://naveen-6802.github.io/imgs/img.png">
+        <img src="https://naveen-6802.github.io/imgs/img.jpg">
         <h1>Hi, my name is Naveen</h1>
         <h2>Fun facts about me:</h2>
         <ul>
